--- a/log430-lab1/pom.xml
+++ b/log430-lab1/pom.xml
@@ -26,7 +26,7 @@
         </configuration>
       </plugin>
 
-      <!-- exec plugin to run java application through maven -->
+      <!-- execi plugin to run java application through maven -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
